agaraa html login main

--- a/Html/mainPage.html
+++ b/Html/mainPage.html
@@ -3,12 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FoodCraft</title>
 </head>
 <body>
-    <header class="head" id="hd"></header>
-    //header.head#hd
-    <footer class="foot" id="ft"></footer>
-    
+
+    <header>
+        <div class="logo">
+            <img src="" alt="FoodCraft Logo">
+        </div>
+        <nav>
+            <a href="#">Category</a>
+            <a href="#">Category</a>
+            <a href="#">Category</a>
+            <a href="#">Category</a>
+            <a href="#">About</a>
+            <a href="#" class="btn-signup">Sign Up/Log In</a>
+        </nav>
+    </header>
+
+
+
+    <form class="search-bar">
+        <input type="text" placeholder="Search...">
+    </form>
+
+
+
+
+    <section class="carousel">
+        <h2>Section 1</h2>   
+            <article>
+                <img src=".jpg" alt="Article Image">
+                <h3>Article</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </article>
+            <article>
+                <img src=".jpg" alt="Article Image">
+                <h3>Article</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </article>
+            <article>
+                <img src=".jpg" alt="Article Image">
+                <h3>Article</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </article>
+    </section>
+
+
+
+
+
+    <section class="carousel">
+        <h2>Section 2</h2>
+            <article>
+                <img src=".jpg" alt="Article Image">
+                <h3>Article</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </article>
+            <article>
+                <img src=".jpg" alt="Article Image">
+                <h3>Article</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </article>      
+    </section>
+
+    <footer>
+        <p>&copy; 2024 FoodCraft. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
