--- a/Html/login.html
+++ b/Html/login.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
-    <header class="head" id="hd"></header>
-    //header.head#hd
-    <footer class="foot" id="ft"></footer>
-
-    
+    <section class="login-container">
+        <h2>Login</h2>
+        <form>
+            <input type="text" placeholder="Username or email" required>
+            <input type="password" placeholder="Password" required>
+            <fieldset class="remember-forgot">
+                <legend></legend>
+                <label><input type="checkbox"> Remember me</label>
+                <a href="#" style="float:right;">Forgot password?</a>
+            </fieldset>
+            <button type="submit">Login</button>
+        </form>
+        <p>
+            Don't have an account? <a href="#">Sign Up</a>
+        </p>
+    </section>
 </body>
-
 </html>
