--- a/Html/mainPage.html
+++ b/Html/mainPage.html
@@ -9,7 +9,7 @@
   
     <header>
         <div class="logo">
-            <img src="" alt="FoodCraft Logo">
+            <img src="" alt="FoodCraft">
         </div>
         <nav>
             <a href="#">Category</a>
