--- a/Html/profile.html
+++ b/Html/profile.html
@@ -3,11 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favorites Recipes</title>
 </head>
 <body>
-    <header class="head" id="hd"></header>
-    //header.head#hd
-    <footer class="foot" id="ft"></footer>
+    <section class="container">
+        <aside>
+            <img src="profile.jpg" alt="Profile Picture">
+            <h2>E. Agarbayar</h2>
+            <p><strong>First Name:</strong> E.</p>
+            <p><strong>Last Name:</strong> Agarbayar</p>
+            <p><strong>Email:</strong> agaraa247@gmail.com</p>
+            <p><strong>Phone Number:</strong> 88154368</p>
+            <p><strong>BIO:</strong> ....................................</p>
+            <button class="edit-btn">Edit Profile</button>
+        </aside>
+        <section>
+            <h2>Favorites Recipes</h2>
+            <main>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+                <article>
+                    <img src="recipe.jpg" alt="Recipe Image">
+                    <p><strong>Article</strong><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </article>
+            </main>
+        </section>
+    </section>
 </body>
 </html>
