--- a/Html/mainPage.html
+++ b/Html/mainPage.html
@@ -38,7 +38,7 @@
 
 
         <section class="slider" aria-label="Featured Recipes">
-            <h2>Featured Recipes</h2>
+            <h2 class="ArticleTag">Featured Recipes</h2>
             <div class="slider-container">
                 <article>
                     <img src="pics/Corndogs.jpg" alt="Corn Dogs" loading="lazy">
@@ -63,7 +63,7 @@
         </section>
 
         <section class="slider" aria-label="Popular Recipes">
-            <h2>Popular Recipes</h2>
+            <h2 class="ArticleTag">Popular Recipes</h2>
             <div class="slider-container">
                 <article>
                     <img src="pics/spaghetti-carbonara-382837d.jpg" alt="Spaghetti Carbonara" loading="lazy">
