--- a/Html/mainPage.html
+++ b/Html/mainPage.html
@@ -39,6 +39,7 @@
 
         <section class="slider" aria-label="Featured Recipes">
             <h2 class="ArticleTag">Featured Recipes</h2>
+            <p class="viewMore" onclick="" >View more-></p>
             <div class="slider-container">
                 <article>
                     <img src="pics/Corndogs.jpg" alt="Corn Dogs" loading="lazy">
